--- a/jade/index.jade
+++ b/jade/index.jade
@@ -24,11 +24,36 @@ block content
   hr
 
   article
-    .s-col.s-5
-      h1 5 Columns
-    .s-col.s-15
-      h1 15 Columns
-    .s-break
+    .s-col.s-3
+      h1 3 Columns
+    .s-col.s-9
+      h1 9 Columns
+
+  article
+    h1 Buttons
+    .s-col.s-2
+      button.s-btn Default
+      p Default
+    .s-col.s-2
+      button.s-btn.s-red Red
+      p.s-red Red
+    .s-col.s-2
+      button.s-btn.s-orange Orange
+      p.s-orange Orange
+    .s-col.s-2
+      button.s-btn.s-yellow Yellow
+      p.s-yellow Yellow
+    .s-col.s-2
+      button.s-btn.s-green Green
+      p.s-green Green
+    .s-col.s-2
+      button.s-btn.s-blue Blue
+      p.s-blue Blue
+    .s-col.s-2
+      button.s-btn.s-violet Violet
+      p.s-violet Violet
+
+  .s-break
 
   hr
 
