--- a/jade/index.jade
+++ b/jade/index.jade
@@ -31,29 +31,37 @@ block content
 
   article
     h1 Buttons
-    .s-col.s-2
-      button.s-btn Default
-      p Default
-    .s-col.s-2
+    .s-col.s-4
+      button.s-btn#modal Default
+      p Default, click to launch a modal
+    .s-col.s-4
       button.s-btn.s-red Red
       p.s-red Red
-    .s-col.s-2
+    .s-col.s-4
       button.s-btn.s-orange Orange
       p.s-orange Orange
-    .s-col.s-2
+  article
+    .s-col.s-4
       button.s-btn.s-yellow Yellow
       p.s-yellow Yellow
-    .s-col.s-2
+    .s-col.s-4
       button.s-btn.s-green Green
       p.s-green Green
-    .s-col.s-2
+    .s-col.s-4
       button.s-btn.s-blue Blue
       p.s-blue Blue
-    .s-col.s-2
+  article
+    .s-col.s-4
       button.s-btn.s-violet Violet
       p.s-violet Violet
-
   .s-break
+
+  .s-modal
+    h3 Modal Title
+      small.s-close &times;
+    p Modal content
+    footer
+      button.s-btn.s-green Go
 
   hr
 
