--- a/stylus/components/modal.styl
+++ b/stylus/components/modal.styl
@@ -52,9 +52,10 @@
   animation-fill-mode(both)
   &[style="display: block;"]
     animation-name(fadeInDown)
-  .close
+  .s-close
     float: right
     cursor: pointer
-  .btn
+    opacity: 0.3
+  .s-btn
     float: right
     margin-left: 5px
