--- a/stylus/base/typography.styl
+++ b/stylus/base/typography.styl
@@ -2,7 +2,7 @@ h1, h2, h3, h4, h5
   font-family: $font-headings
   font-size: $font-headings-baseSize
   color: $black
-  margin-bottom: ($space * 0.4)
+  margin: ($space * 0.4) 0
 p, 
 em, 
 strong, 
@@ -17,21 +17,21 @@ blockquote,
   font-family: $font-default
   font-size: $font-baseSize
   color: $black
-  margin-bottom: $space
+  margin: ($space/2) 0
   line-height: $font-baseLineHeight
 
 h1
   font-size: $font-headings-baseSize + 20
-  margin-bottom: $space
+  margin: $space 0
 h2
   font-size: $font-headings-baseSize + 16
-  margin-bottom: ($space * 0.7)
+  margin: ($space * 0.7) 0
 h3
   font-size: $font-headings-baseSize + 10
-  margin-bottom: ($space * 0.65)
+  margin: ($space * 0.65) 0
 h4
   font-size: $font-headings-baseSize + 3
-  margin-bottom: ($space * 0.5)
+  margin: ($space * 0.5) 0
 
 blockquote
   font-family: $font-serif
