--- a/jade/index.jade
+++ b/jade/index.jade
@@ -24,9 +24,9 @@ block content
   hr
 
   article
-    .s-col.s-3
+    .s-col.s-sm-3
       h1 3 Columns
-    .s-col.s-9
+    .s-col.s-sm-9
       h1 9 Columns
 
   article
