--- a/stylus/base/grid.styl
+++ b/stylus/base/grid.styl
@@ -1,6 +1,8 @@
 col(x=12)
   width: (100% * (x/$columns))
 
+// Default XS
+
 .s-
   &break
     clear: both
@@ -8,6 +10,7 @@ col(x=12)
     padding-right: $space
     float: left
     box-sizing(border-box)
+    width: 100%
     &:last-child
       padding-right: 0
   &12
@@ -42,3 +45,38 @@ col(x=12)
     width: (100% * 3/5)
   &4f
     width: (100% * 4/5)
+
+@media screen and (min-width: 768px)
+  .s-sm-
+    &12
+      col(12)
+    &11
+      col(11)
+    &10
+      col(10)
+    &9
+      col(9)
+    &8
+      col(8)
+    &7
+      col(7)
+    &6
+      col(6)
+    &5
+      col(5)
+    &4
+      col(4)
+    &3
+      col(3)
+    &2
+      col(2)
+    &1
+      col(1)
+    &1f
+      width: (100% * 1/5)  
+    &2f
+      width: (100% * 2/5)
+    &3f
+      width: (100% * 3/5)
+    &4f
+      width: (100% * 4/5)
