--- a/stylus/base/grid.styl
+++ b/stylus/base/grid.styl
@@ -80,3 +80,108 @@ col(x=12)
       width: (100% * 3/5)
     &4f
       width: (100% * 4/5)
+
+@media screen and (min-width: 1024px)
+  .s-md-
+    &12
+      col(12)
+    &11
+      col(11)
+    &10
+      col(10)
+    &9
+      col(9)
+    &8
+      col(8)
+    &7
+      col(7)
+    &6
+      col(6)
+    &5
+      col(5)
+    &4
+      col(4)
+    &3
+      col(3)
+    &2
+      col(2)
+    &1
+      col(1)
+    &1f
+      width: (100% * 1/5)  
+    &2f
+      width: (100% * 2/5)
+    &3f
+      width: (100% * 3/5)
+    &4f
+      width: (100% * 4/5)
+
+@media screen and (min-width: 1200px)
+  .s-lg-
+    &12
+      col(12)
+    &11
+      col(11)
+    &10
+      col(10)
+    &9
+      col(9)
+    &8
+      col(8)
+    &7
+      col(7)
+    &6
+      col(6)
+    &5
+      col(5)
+    &4
+      col(4)
+    &3
+      col(3)
+    &2
+      col(2)
+    &1
+      col(1)
+    &1f
+      width: (100% * 1/5)  
+    &2f
+      width: (100% * 2/5)
+    &3f
+      width: (100% * 3/5)
+    &4f
+      width: (100% * 4/5)
+
+@media screen and (min-width: 1700px)
+  .s-xl-
+    &12
+      col(12)
+    &11
+      col(11)
+    &10
+      col(10)
+    &9
+      col(9)
+    &8
+      col(8)
+    &7
+      col(7)
+    &6
+      col(6)
+    &5
+      col(5)
+    &4
+      col(4)
+    &3
+      col(3)
+    &2
+      col(2)
+    &1
+      col(1)
+    &1f
+      width: (100% * 1/5)  
+    &2f
+      width: (100% * 2/5)
+    &3f
+      width: (100% * 3/5)
+    &4f
+      width: (100% * 4/5)
