--- a/stylus/base/typography.styl
+++ b/stylus/base/typography.styl
@@ -19,6 +19,11 @@ blockquote,
   color: $black
   margin: ($space/2) 0
   line-height: $font-baseLineHeight
+body
+  font-family: $font-default
+  font-size: $font-baseSize
+  color: $black
+  line-height: $font-baseLineHeight
 
 h1
   font-size: $font-headings-baseSize + 20
