--- a/jade/index.jade
+++ b/jade/index.jade
@@ -1,6 +1,18 @@
 extends layout
 
 block content
+
+  .s-col.s-sm-6.s-lg-3 
+    p Column
+  .s-col.s-sm-6.s-lg-3  
+    p Column
+  .s-col.s-sm-6.s-lg-3 
+    p Column
+  .s-col.s-sm-6.s-lg-3 
+    p Column
+
+  hr
+
   h1 Heading 1
   h2 Heading 2
   h3 Heading 3
