--- a/jade/index.jade
+++ b/jade/index.jade
@@ -13,11 +13,16 @@ block content
 
   hr
 
-  h1 Heading 1
-  h2 Heading 2
-  h3 Heading 3
-  h4 Heading 4
-  h5 Heading 5
+  h1 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+  tempor incididunt ut labore et dolore magna aliqua.
+  h2 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+  tempor incididunt ut labore et dolore magna aliqua.
+  h3 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+  tempor incididunt ut labore et dolore magna aliqua.
+  h4 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+  tempor incididunt ut labore et dolore magna aliqua.
+  h5 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+  tempor incididunt ut labore et dolore magna aliqua.
   p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
 
   hr
@@ -69,11 +74,12 @@ block content
   .s-break
 
   .s-modal
-    h3 Modal Title
+    h5 Modal Title
       small.s-close &times;
     p Modal content
     footer
-      button.s-btn.s-green Go
+      span Some text
+      button.s-btn.s-blue Go
 
   hr
 
