--- a/stylus/base/typography.styl
+++ b/stylus/base/typography.styl
@@ -2,7 +2,9 @@ h1, h2, h3, h4, h5
   font-family: $font-headings
   font-size: $font-headings-baseSize
   color: $black
+  line-height: normal
   margin: ($space * 0.4) 0
+  font-weight: 500
 p, 
 em, 
 strong, 
@@ -17,7 +19,7 @@ blockquote,
   font-family: $font-default
   font-size: $font-baseSize
   color: $black
-  margin: ($space/2) 0
+  margin-bottom: $space
   line-height: $font-baseLineHeight
 body
   font-family: $font-default
