--- a/stylus/components/modal.styl
+++ b/stylus/components/modal.styl
@@ -41,8 +41,7 @@
   background-color: #fff
   box-shadow(0px 0px 25px 10px rgba(0,0,0,0.4))
   z-index: 11
-  padding: 15px
-  padding-top: 0px
+  padding: 0 $space
   position: fixed
   outline: 9999px solid rgba(0,0,0,0.25)
   border-radius(5px)
@@ -57,5 +56,16 @@
     cursor: pointer
     opacity: 0.3
   .s-btn
-    float: right
     margin-left: 5px
+  footer
+    text-align: right
+    padding: 0 $space
+    background-color: $lightGrey
+    margin: 0 (-1 * $space)
+    overflow: hidden
+    border-radius(0px 0px 5px 5px)
+    *
+      margin: ($space/2) 0
+    &:before
+      display: table
+      content: ' '
