fixing button and modal styles

--- a/jade/index.jade
+++ b/jade/index.jade
@@ -2,14 +2,20 @@ extends layout
 
 block content
 
-  .s-col.s-sm-6.s-lg-3 
-    p Column
-  .s-col.s-sm-6.s-lg-3  
-    p Column
-  .s-col.s-sm-6.s-lg-3 
-    p Column
-  .s-col.s-sm-6.s-lg-3 
-    p Column
+  article
+    .s-col.s-sm-6.s-md-4.s-lg-3 
+      h5 Heading
+      p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    .s-col.s-sm-6.s-md-4.s-lg-3 
+      h5 Heading
+      p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    .s-col.s-sm-6.s-md-4.s-lg-3 
+      h5 Heading
+      p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    .s-col.s-sm-6.s-md-4.s-lg-3 
+      h5 Heading
+      p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+  .s-break
 
   hr
 
@@ -74,9 +80,11 @@ block content
   .s-break
 
   .s-modal
-    h5 Modal Title
-      small.s-close &times;
-    p Modal content
+    header
+      h5 Modal Title
+        small.s-close &times;
+    main
+      p Modal content
     footer
       span Some text
       button.s-btn.s-blue Go
