--- a/stylus/base/typography.styl
+++ b/stylus/base/typography.styl
@@ -5,6 +5,8 @@ h1, h2, h3, h4, h5
   line-height: normal
   margin: ($space * 0.4) 0
   font-weight: 500
+  &:first-child
+    margin-top: 0
 p, 
 em, 
 strong, 
@@ -76,3 +78,5 @@ a
       color: $blue
     &violet
       color: $violet
+strong
+  font-weight: 500
