--- a/css/start.css
+++ b/css/start.css
@@ -101,6 +101,13 @@ h5 {
   margin: 10px 0;
   font-weight: 500;
 }
+h1:first-child,
+h2:first-child,
+h3:first-child,
+h4:first-child,
+h5:first-child {
+  margin-top: 0;
+}
 p,
 em,
 strong,
@@ -224,6 +231,9 @@ blockquote.s-violet,
 a.s-violet {
   color: #8b008b;
 }
+strong {
+  font-weight: 500;
+}
 .s-wrapper {
   padding: 25px;
   max-width: 1200px;
@@ -234,12 +244,15 @@ a.s-violet {
   clear: both;
 }
 .s-col {
-  padding-right: 25px;
+  padding: 0 12.5px;
   float: left;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   width: 100%;
+}
+.s-col:first-child {
+  padding-left: 0;
 }
 .s-col:last-child {
   padding-right: 0;
@@ -595,7 +608,8 @@ a.s-violet {
   -webkit-box-shadow: 0px 0px 25px 10px rgba(0,0,0,0.4);
   box-shadow: 0px 0px 25px 10px rgba(0,0,0,0.4);
   z-index: 11;
-  padding: 0 25px;
+  padding: 25px;
+  padding-bottom: 0;
   position: fixed;
   outline: 9999px solid rgba(0,0,0,0.25);
   -webkit-border-radius: 5px;
@@ -634,6 +648,8 @@ a.s-violet {
   opacity: 0.3;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=30)";
   filter: alpha(opacity=30);
+  margin-right: -10px;
+  margin-top: -15px;
 }
 .s-modal .s-btn {
   margin-left: 5px;
