--- a/stylus/components/modal.styl
+++ b/stylus/components/modal.styl
@@ -41,7 +41,8 @@
   background-color: #fff
   box-shadow(0px 0px 25px 10px rgba(0,0,0,0.4))
   z-index: 11
-  padding: 0 $space
+  padding: $space
+  padding-bottom: 0
   position: fixed
   outline: 9999px solid rgba(0,0,0,0.25)
   border-radius(5px)
@@ -55,6 +56,8 @@
     float: right
     cursor: pointer
     opacity: 0.3
+    margin-right: (-1 * ($space - 15))
+    margin-top: (-1 * ($space - 10))
   .s-btn
     margin-left: 5px
   footer
