--- a/jade/index.jade
+++ b/jade/index.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
 
-  article
+  article.s-row
     .s-col.s-sm-6.s-md-4.s-lg-3 
       h5 Heading
       p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
@@ -15,7 +15,6 @@ block content
     .s-col.s-sm-6.s-md-4.s-lg-3 
       h5 Heading
       p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-  .s-break
 
   hr
 
@@ -46,14 +45,15 @@ block content
 
   hr
 
-  article
+  article.s-row
     .s-col.s-sm-3
       h1 3 Columns
     .s-col.s-sm-9
       h1 9 Columns
 
-  article
-    h1 Buttons
+  article.s-row
+    .s-col.s-12 
+      h3 Buttons
     .s-col.s-4
       button.s-btn#modal Default
       p Default, click to launch a modal
@@ -63,7 +63,7 @@ block content
     .s-col.s-4
       button.s-btn.s-orange Orange
       p.s-orange Orange
-  article
+  article.s-row
     .s-col.s-4
       button.s-btn.s-yellow Yellow
       p.s-yellow Yellow
@@ -73,7 +73,7 @@ block content
     .s-col.s-4
       button.s-btn.s-blue Blue
       p.s-blue Blue
-  article
+  article.s-row
     .s-col.s-4
       button.s-btn.s-violet Violet
       p.s-violet Violet
