--- a/jade/index.jade
+++ b/jade/index.jade
@@ -2,6 +2,20 @@ extends layout
 
 block content
 
+  nav.s-bar
+    ul
+      li
+        a(href="#") Item
+      li
+        a(href="#") Item
+      li
+        input(type="text" placeholder="Name")
+    ul(style="float:right")
+      li
+        a(href="#") Item
+      li
+        a.s-btn(href="#") Item
+
   article.s-row
     .s-col.s-sm-6.s-md-4.s-lg-3 
       h5 Heading
