--- a/stylus/components/button.styl
+++ b/stylus/components/button.styl
@@ -1,6 +1,6 @@
 .s-
   &btn
-    padding: ($space/3) (($space/3) * 2)
+    padding: $buttonSpacing
     background-color: lightgray
     color: $black
     border: 0px
