--- a/jade/index.jade
+++ b/jade/index.jade
@@ -10,11 +10,43 @@ block content
         a(href="#") Item
       li
         input(type="text" placeholder="Name")
-    ul(style="float:right")
+    ul.s-right
+      li
+        a(href="#") Item
+  nav.s-bar
+    ul
+      li
+        a.s-btn(href="#") Item
+      li
+        a.s-btn.s-red(href="#") Item
+      li
+        a.s-btn.s-orange(href="#") Item
+      li
+        a.s-btn.s-yellow(href="#") Item
+      li
+        a.s-btn.s-green(href="#") Item
+      li
+        a.s-btn.s-blue(href="#") Item
+      li
+        a.s-btn.s-violet(href="#") Item
+    ul.s-right
+      li
+        a.s-btn(href="#") Item
+  nav.s-bar
+    ul
       li
         a(href="#") Item
       li
         a.s-btn(href="#") Item
+      li
+        a(href="#") Item
+    ul.s-right
+      li
+        a(href="#") Item
+      li
+        a.s-btn(href="#") Item
+      li
+        a(href="#") Item
 
   article.s-row
     .s-col.s-sm-6.s-md-4.s-lg-3 
