--- a/stylus/components/button.styl
+++ b/stylus/components/button.styl
@@ -21,6 +21,7 @@
         color: white
       &yellow
         background-color: $yellow
+        color: $black
       &green
         background-color: $green
         color: white
