--- a/jade/index.jade
+++ b/jade/index.jade
@@ -47,6 +47,24 @@ block content
         a.s-btn(href="#") Item
       li
         a(href="#") Item
+  nav.s-bar
+    ul
+      li
+        a.s-bar-heading(href="#") Website
+      li
+        a(href="#") Item
+      li Item that is not a link.
+      li
+        a.s-btn(href="#") Item
+      li
+        a(href="#") Item
+    ul.s-right
+      li
+        a(href="#") Item
+      li
+        a.s-btn(href="#") Item
+      li
+        a(href="#") Item
 
   article.s-row
     .s-col.s-sm-6.s-md-4.s-lg-3 
@@ -96,34 +114,6 @@ block content
       h1 3 Columns
     .s-col.s-sm-9
       h1 9 Columns
-
-  article.s-row
-    .s-col.s-12 
-      h3 Buttons
-    .s-col.s-4
-      button.s-btn#modal Default
-      p Default, click to launch a modal
-    .s-col.s-4
-      button.s-btn.s-red Red
-      p.s-red Red
-    .s-col.s-4
-      button.s-btn.s-orange Orange
-      p.s-orange Orange
-  article.s-row
-    .s-col.s-4
-      button.s-btn.s-yellow Yellow
-      p.s-yellow Yellow
-    .s-col.s-4
-      button.s-btn.s-green Green
-      p.s-green Green
-    .s-col.s-4
-      button.s-btn.s-blue Blue
-      p.s-blue Blue
-  article.s-row
-    .s-col.s-4
-      button.s-btn.s-violet Violet
-      p.s-violet Violet
-  .s-break
 
   .s-modal
     header
