--- a/stylus/components/button.styl
+++ b/stylus/components/button.styl
@@ -1,12 +1,12 @@
 .s-
   &btn
-    padding: $buttonSpacing
+    padding: $buttonSpacingV $buttonSpacingH
     background-color: lightgray
     color: $black
     border: 0px
     outline: none
     cursor: pointer
-    border-radius(3px)
+    border-radius($buttonBorderRadius)
     box-shadow(0px -3px 0px 0px rgba(0, 0, 0, 0.2) inset)
     &:hover
       box-shadow(0px 0px 0px 0px transparent inset)
