--- a/stylus/components/modal.styl
+++ b/stylus/components/modal.styl
@@ -45,7 +45,7 @@
   padding-bottom: 0
   position: fixed
   outline: 9999px solid rgba(0,0,0,0.25)
-  border-radius(5px)
+  border-radius($buttonBorderRadius)
   animation-duration(0.25s)
   animation-delay(0.2s)
   animation-timing-function(ease)
