--- a/jade/index.jade
+++ b/jade/index.jade
@@ -5,8 +5,10 @@ block content
   nav.s-bar
     ul
       li
-        span.s-left.fa.fa-search
-        a(href="#") Item
+        
+        a(href="#") 
+          span.s-left.fa.fa-search
+          |  Item
       li
         a(href="#") Item
       li
@@ -17,7 +19,7 @@ block content
   nav.s-bar
     ul
       li
-        a.s-btn(href="#") Item
+        a.s-btn#modal(href="#") Item
       li
         a.s-btn.s-red(href="#") Item
       li
@@ -66,7 +68,61 @@ block content
         a.s-btn(href="#") Item
       li
         a(href="#") Item
-
+  article.s-row
+    .s-col.s-4
+      nav.s-bar
+        ul
+          li
+            a.s-bar-heading(href="#") Website
+          li
+            a(href="#") Item
+          li Item that is not a link.
+          li
+            a.s-btn(href="#") Item
+          li
+            a(href="#") Item
+        ul.s-right
+          li
+            a(href="#") Item
+          li
+            a.s-btn(href="#") Item
+          li
+            a(href="#") Item
+    .s-col.s-4
+      nav.s-bar
+        ul
+          li
+            a.s-btn(href="#") Item
+          li 
+            a.s-btn(href="#") Item
+          li
+            a.s-btn(href="#") Item
+          li
+            a.s-btn(href="#") Item
+        ul.s-right
+          li
+            a.s-btn(href="#") Item
+          li
+            a.s-btn(href="#") Item
+          li
+            a(href="#") Item
+    .s-col.s-4
+      nav.s-bar
+        ul
+          li
+            a.s-btn(href="#") Item
+          li Item that is not a link.
+          li
+            a.s-btn(href="#") Item
+          li
+            a(href="#") Item
+        ul.s-right
+          li
+            a.s-btn(href="#") Item
+          li
+            a.s-btn(href="#") Item
+          li
+            a(href="#") Item
   article.s-row
     .s-col.s-sm-6.s-md-4.s-lg-3 
       h5 Heading
