--- a/jade/index.jade
+++ b/jade/index.jade
@@ -13,6 +13,13 @@ block content
         a(href="#") Item
       li
         input(type="search" placeholder="Name")
+      li.s-dropdown
+        a(href="#") Dropdown
+        ul
+          li
+            a(href="#") Dropdown Item
+          li
+            a(href="#") Dropdown Item
     ul.s-right
       li
         a(href="#") Item
