--- a/css/start.css
+++ b/css/start.css
@@ -730,6 +730,11 @@ hr {
   display: inline-block;
   margin-right: 0;
 }
+.s-bar > ul > li > ul {
+  display: none;
+  margin: 0;
+  margin-top: 4.166666666666667px;
+}
 .s-bar > ul.s-right {
   float: right;
 }
@@ -847,4 +852,46 @@ input[type="week"]:focus {
   outline: none;
   background-color: #fff;
   border-color: #555;
+}
+.s-dropdown {
+  border-left: 1px solid transparent;
+  border-right: 1px solid transparent;
+}
+.s-dropdown > a:after {
+  content: "\f0d7";
+  font-family: 'FontAwesome';
+  margin-left: 5px;
+}
+.s-dropdown > ul {
+  display: none;
+  position: absolute;
+  background-color: #fff;
+  margin-top: 4.166666666666667px;
+  border: 1px solid rgba(0,0,0,0.15);
+  border-top: 0px;
+  margin: 0;
+}
+.s-dropdown > ul > li {
+  margin: 0;
+}
+.s-dropdown > ul > li > a {
+  padding: 8.333333333333334px 16.666666666666668px;
+  display: block;
+}
+.s-dropdown.s-dropdown_clicked {
+  margin-top: -5px;
+  margin-bottom: -5px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  background-color: rgba(255,255,255,0.9);
+  border-color: rgba(0,0,0,0.15);
+}
+.s-dropdown.s-dropdown_clicked > ul {
+  display: block;
+}
+.s-dropdown.s-dropdown_clicked > ul > li > a:hover {
+  background-color: #fff;
+}
+.s-dropdown.s-dropdown_clicked > ul > li > a:active {
+  background-color: rgba(0,0,0,0.15);
 }
