--- a/stylus/components/bar.styl
+++ b/stylus/components/bar.styl
@@ -27,6 +27,10 @@
         > .fa
           display: inline-block
           margin-right: 0
+        > ul
+            display: none
+            margin: 0
+            margin-top: ($buttonSpacingV/2)
       &.s-right
         float: right
         > li
